modal subir archivo

--- a/html/listasDocentes.html
+++ b/html/listasDocentes.html
@@ -262,23 +262,19 @@
                   <table class="table table-hover">
                     <thead>
                       <tr>
-                        <th>Nombre docente</th>
+                        <th>Nombre completo</th>
                         <th>Número empleado</th>
                         <th>División académica</th>
+                        <th>Cuestionarios realizados</th>
                         <th>Acciones</th>
                       </tr>
                     </thead>
                     <tbody class="table-border-bottom-0">
                       <tr>
-                        <td>
-                        <span>Catalina Barbeyto</span>
-                        </td>
+                        <td>Catalina Barbeyto</td>
                         <td>899</td>
-                        <td>
-                          <ul class="list-unstyled m-0 avatar-group d-flex align-items-center">
-                           <span>Informática y Computación</span>
-                          </ul>
-                        </td>
+                        <td>Informática y Computación</td>
+                        <td>Estrés y fatiga</td>
                         <td>
                           <div class="dropdown">
                             <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -308,11 +304,8 @@
                           <span>Mario Ovando</span>
                         </td>
                         <td>756</td>
-                        <td>
-                          <ul class="list-unstyled m-0 avatar-group d-flex align-items-center">
-                              <span>División de Informática y Computación</span>
-                          </ul>
-                        </td>
+                        <td>Informática y Computación</td>
+                        <td>Estrés</td>
                         <td>
                           <div class="dropdown">
                             <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -339,15 +332,10 @@
                     </thead>
                     <tbody class="table-border-bottom-0">
                       <tr>
-                        <td>
-                        <span>Edgardo Faustinos </span>
-                        </td>
+                        <td>Edgardo Faustinos</td>
                         <td>956</td>
-                        <td>
-                          <ul class="list-unstyled m-0 avatar-group d-flex align-items-center">
-                              <span>Informática y Computación</span>
-                          </ul>
-                        </td>
+                        <td>Informática y Computación</td>
+                        <td>Fatiga</td>
                         <td>
                           <div class="dropdown">
                             <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -373,15 +361,10 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>
-                          <span>Celia Correa</span>
-                        </td>
+                        <td> Celia Correa</td>
                         <td>435</td>
-                        <td>
-                          <ul class="list-unstyled m-0 avatar-group d-flex align-items-center">
-                              <span>Telemática</span>
-                          </ul>
-                        </td>
+                        <td>Telemática</td> 
+                        <td>Fatiga</td> 
                         <td>
                           <div class="dropdown">
                             <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
