--- a/html/listasDocentes.html
+++ b/html/listasDocentes.html
@@ -399,6 +399,24 @@
             </div>
             <!-- / Content -->
 
+            <!--Paginación -->
+            <br>
+            <br>
+            <div class="row">
+              <div class="col-12">
+                  <ul class="pagination justify-content-center">
+                      <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item active"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+                  </ul> 
+              </div>
+            </div>
+            
+            <!-- fin Paginación -->
+
+
             <!-- Footer -->
 
             <div class="copyright d-flex justify-content-center align-items-center min-vh-50 text-center">
