--- a/html/libros.html
+++ b/html/libros.html
@@ -456,12 +456,12 @@
 
                       <div class="mb-3">
                           <label for="videoTitle" class="form-label">Título del libro</label>
-                          <input type="text" class="form-control" id="videoTitle" placeholder="Ingresa el título del video">
+                          <input type="text" class="form-control" id="videoTitle" placeholder="Ingresa el título del libro">
                       </div>
 
                       <div class="mb-3">
                           <label for="videoDescription" class="form-label">Sinópsis</label>
-                          <textarea class="form-control" id="videoDescription" rows="3" placeholder="Ingresa una descripción del video"></textarea>
+                          <textarea class="form-control" id="videoDescription" rows="3" placeholder="Ingresa la sinópsis del libro"></textarea>
                       </div>
 
                       <!-- Video explorado -->
