--- a/html/entrevistas.html
+++ b/html/entrevistas.html
@@ -256,7 +256,7 @@
                     <h5 class="card-header">Lista de entrevistas publicadas</h5>
                     <!-- Botón para abrir el modal -->
                     <div class="text-center">
-                        <button class="custom-btn" data-bs-toggle="modal" data-bs-target="#videoModal">Subir video</button>
+                        <button class="custom-btn" data-bs-toggle="modal" data-bs-target="#videoModal">Publicar entrevista</button>
                 </div>
                 <br>
                     <div class="table-responsive text-nowrap">
