--- a/html/informes.html
+++ b/html/informes.html
@@ -495,7 +495,23 @@
             </div>
             <!-- / Content -->
 
+            <!--Paginación -->
+            <br>
+            <br>
+            <div class="row">
+              <div class="col-12">
+                  <ul class="pagination justify-content-center">
+                      <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item active"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+                  </ul> 
+              </div>
+            </div>
             
+            <!-- fin Paginación -->
+
 
             <!-- Footer -->
 
@@ -513,7 +529,12 @@
 
             <!-- / Footer -->
 
-            
+            <div class="content-backdrop fade"></div>
+          </div>
+          <!-- Content wrapper -->
+        </div>
+        <!-- / Layout page -->
+      </div>
 
       <!-- Overlay -->
       <div class="layout-overlay layout-menu-toggle"></div>
