--- a/html/videos.html
+++ b/html/videos.html
@@ -259,7 +259,7 @@
                     <h5 class="card-header">Lista de videos publicados</h5>
                     <!-- Botón para abrir el modal -->
                     <div class="text-center">
-                        <button class="custom-btn" data-bs-toggle="modal" data-bs-target="#videoModal">Subir video</button>
+                        <button class="custom-btn" data-bs-toggle="modal" data-bs-target="#videoModal">Publicar video</button>
                 </div>
                 <br>
                     <div class="table-responsive text-nowrap">
