--- a/fpst.html
+++ b/fpst.html
@@ -94,14 +94,15 @@
         <div class="blog-content">
             <h2 class="blog-title">Cuestionario de Estrés Laboral del la OIT-OMS</h2>
             <div class="blog-meta">
-                <p><i class="far fa-user"></i> Desarrollado por los investigadores Sonja Sonnentang y Christoph Fritz.</p>
+                <p><i class="far fa-user"></i> Desarrollado por Organización Internacional del Trabajo (OIT) y la Organización Mundial de la Salud (OMS).</p>
                 <p><i class="far fa-list-alt"></i> Categoría: Evaluación del estrés laboral</p>
-                <p><i class="far fa-calendar-alt"></i>2007</p>
+                <p><i class="far fa-calendar-alt"></i>1997</p>
             </div>
             <div class="blog-text">
-                <p>Evalua el estrés laboral y sus efectos. Basado en investigaciones previas este cuestionario mide diversos aspectos relacionados con las demandas y 
-                    recursos en el trabajo, proporcionando una visión integral del bienestar de los empleados 
-                    frente a las exigencias de su ambiente profesional.
+                <p>Es una herramienta diseñada para evaluar el estrés laboral en los trabajadores. Este cuestionario 
+                se utiliza principalmente para identificar y medir los factores de riesgo en el entorno laboral que 
+                pueden estar contribuyendo al estrés, afectando la salud orgánica y bienestar mental de los empleados,
+                en sus ambientes laborales, ya sea por las condiciones del trabajo, la carga laboral, entre otras.
                 </p>
                 <!-- Botón para abrir el modal -->
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
