--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="carousel-text">
                         <h1>¿Qué <span>es</span> el CCI?</h1>
                         <p>
-                            El Cuerpo Colegiado de Investigadores dedicados al desarrollo de soluciones para la mejora del bienestar en el trabajo docente
+                            El Cuerpo Colegiado de Investigación dedicados al desarrollo de soluciones para la mejora del bienestar en el trabajo docente
                         </p>
 
                     </div>
