--- a/html/informes.html
+++ b/html/informes.html
@@ -36,6 +36,7 @@
   <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
   <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
   <script src="../assets/js/config.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -259,8 +260,8 @@
               <div class="card">
                 <h5 class="card-header">Lista de informes</h5>
               <!-- Botón para abrir el modal -->
-              <div class="text-center">
-              <button class="custom-btn" data-bs-toggle="modal" data-bs-target="#videoModal">Publicar informe</button>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button"><i class="bi bi-file-earmark-plus"></i></button>
               </div>
               <br>
               <!-- Tabla -->
