--- a/fpst.html
+++ b/fpst.html
@@ -177,16 +177,21 @@
                         Conteste todas las preguntas.
                         <br>
                         <br>
-                        1 = Totalmente en desacuerdo  
+                        1 = Si la condición NUNCA es fuente de estrés.
                         <br>     
-                        2 = En desacuerdo         
+                        2 = Si la condición RARAS VECES es fuente de estrés.       
                         <br>
-                        3 = Ni de acuerdo ni desacuerdo
+                        3 = Si la condición OCASIONALMENTE es fuente de estrés.
                         <br>         
-                        4 = De acuerdo     
+                        4 = Si la condición ALGUNAS VECES es fuente de estrés.    
                         <br>
-                        5 = Totalmente de acuerdo
-                        </p>
+                        5 = Si la condición FRECUENTEMENTE es fuente de estrés.
+                        <br>
+                        5 = Si la condición GENERALMENTE es fuente de estrés.
+                        <br>
+                        6.	Si la condición SIEMPRE es fuente de estrés.
+                    </p>
+
                     <div class="mb-3">
                         <p>Comenzamos</p>
                             <!-- Opción de selección (Radio Buttons) -->
