--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
     </div>
     <!-- Carousel End -->
 
+
+      <!-- CHATBOT BOTÓN FLOTANTE" -->
+     <!--END CHATBOT -->
+    
+
     <!-- About Start -->
     <div class="about">
         <div class="container">
@@ -346,7 +351,6 @@
         </div>
     </div>
     <!-- Contact End -->
-
 
 
 
