--- a/fpst.html
+++ b/fpst.html
@@ -89,7 +89,7 @@
 <div class="col-md-6">
     <div class="blog-item">
         <div class="blog-img">
-            <img src="img/Post_Sonnentang & Fritz.png" alt="Blog">
+            <img src="img/Post .png" alt="Blog">
         </div>
         <div class="blog-content">
             <h2 class="blog-title">Cuestionario de Estrés Laboral del la OIT-OMS</h2>
